--- a/Resources/views/Product/index.html.twig
+++ b/Resources/views/Product/index.html.twig
@@ -133,7 +133,7 @@
                 <div class="col-sm-4 col-lg-4 col-md-4">
                     <div class="thumbnail">
                         <a href="{{ path('cart_product_view', { 'slug': entity.slug }) }}">
-                            <img src="{{ asset('/bundles/mobilecartfrontend/images/320x150.gif') }}" alt="">
+                            <img src="{{ asset(imagePath('product', entity, 'list_grid')) }}" alt="">
                         </a>
 
                         <div class="caption">
