--- a/Resources/views/Product/view.html.twig
+++ b/Resources/views/Product/view.html.twig
@@ -126,7 +126,7 @@
 
         <div class="col-sm-6">
             <div class="well">
-                <img class="img-responsive" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="" />
+                <img class="img-responsive" src="{{ asset(imagePath('product', entity, 'view_jumbo')) }}" alt="" />
             </div>
         </div>
 
