--- a/Resources/views/Category/index.html.twig
+++ b/Resources/views/Category/index.html.twig
@@ -94,7 +94,7 @@
                 <div class="col-sm-4 col-lg-4 col-md-4">
                     <div class="thumbnail">
                         <a href="{{ path('cart_category_products', { 'slug': entity.slug }) }}">
-                            <img src="{{ asset('/bundles/mobilecartfrontend/images/320x150.gif') }}" alt="">
+                            <img src="{{ asset(imagePath('category', entity, 'list_grid')) }}" alt="">
                         </a>
 
                         <div class="caption">
