--- a/Resources/views/Checkout/index.html.twig
+++ b/Resources/views/Checkout/index.html.twig
@@ -157,6 +157,8 @@
             <script type="text/javascript" src="{{ javascript.url }}"></script>
         {% elseif javascript.asset is defined %}
             <script src="{{ asset(javascript.asset) }}" type="text/javascript"></script>
+        {% elseif javascript.js_template is defined and javascript.data is defined %}
+            {% include javascript.js_template with javascript.data %}
         {% elseif javascript.js_template is defined %}
             {% include javascript.js_template %}
         {% endif %}
