--- a/Resources/views/Checkout/payment_methods.html.twig
+++ b/Resources/views/Checkout/payment_methods.html.twig
@@ -1,16 +1,25 @@
+{% form_theme form 'bootstrap_3_layout.html.twig' %}
 
-{% set i = 0 %}
-{% for method in payment_methods %}
-    <div class="payment-option row">
-        <div class="col-sm-2 payment-option-selector">
-            <label>{{ method.label }}</label>
-            <input type="radio" class="payment-option-input" name="payment_method" value="{{ method.code }}" {% if i == 0 %} checked="checked" {% endif %}/>
-        </div>
-        <div class="col-sm-10 payment-option-form"{% if i > 0 %} style="display: none;"{% endif %}>
+<div class="payment-option row">
+    <div class="col-sm-2 payment-option-selector">
+        {% set i = 0 %}
+        {% for method in payment_methods %}
+            <div>
+                <input type="radio" class="payment-option-input payment-{{ method.code }}" data-code="{{ method.code }}" name="payment_method" value="{{ method.code }}" {% if i == 0 %} checked="checked" {% endif %}/>
+                <label>{{ method.label }}</label>
+            </div>
+            {% set i = i + 1 %}
+        {% endfor %}
+    </div>
+    <div class="col-sm-10">
+
+        {% set i = 0 %}
+        {% for method in payment_methods %}
+            <div class="payment-option-form payment-{{ method.code }}" data-code="{{ method.code }}"{% if i > 0 %} style="display: none;"{% endif %}">
             {# dont break main form with more form tags, markup #}
             {{ form_widget(method.getForm()) }}
-        </div>
+            {% set i = i + 1 %}
+            </div>
+        {% endfor %}
     </div>
-
-    {% set i = i + 1 %}
-{% endfor %}
+</div>
