--- a/Resources/views/Checkout/payment_methods_js.html.twig
+++ b/Resources/views/Checkout/payment_methods_js.html.twig
@@ -4,11 +4,11 @@
     $(function() {
 
         // handle radio inputs; show and hide sub-forms
-
-        $('div#section-add-payment input.payment-option-input').click(function() {
+        $('input.payment-option-input').click(function() {
             var self = $(this);
-            $('div#section-add-payment div.payment-option-form').hide();
-            self.parent().parent().find('div.payment-option-form').show();
+            var code = self.attr('data-code');
+            $('div.payment-option-form').hide();
+            $('div.payment-option-form.payment-' + code).show();
         });
 
     });
