--- a/Resources/views/Checkout/index.html.twig
+++ b/Resources/views/Checkout/index.html.twig
@@ -109,7 +109,7 @@
 
     {{ parent() }}
 
-    <script src="{{ asset('bundles/mobilecartfrontend/js/country-region-widget.js') }}" type="text/javascript"></script>
+    <script src="{{ asset(frontendAsset('js/country-region-widget.js')) }}" type="text/javascript"></script>
 
     <script type="text/javascript">
         var countryRegions = {{ country_regions|json_encode|raw }};
@@ -118,7 +118,7 @@
         });
     </script>
 
-    <script src="{{ asset('bundles/mobilecartfrontend/js/checkout-widget.js') }}" type="text/javascript"></script>
+    <script src="{{ asset(frontendAsset('js/checkout-widget.js')) }}" type="text/javascript"></script>
 
     <script type="text/javascript">
 
@@ -130,7 +130,6 @@
         var confirmOrderUrl = '{{ confirm_order_url }}';
         var confirmOrderModal = $('#confirm-order-modal');
         var submitOrderUrl = '{{ submit_order_url }}';
-        var submitOrderData = {};
 
         var checkout = new CheckoutWidget({
             container: container,
@@ -140,8 +139,7 @@
             totalsDiscountsSection: totalsDiscountsSection,
             confirmOrderUrl: confirmOrderUrl,
             confirmOrderModal: confirmOrderModal,
-            submitOrderUrl: submitOrderUrl,
-            submitOrderData: submitOrderData
+            submitOrderUrl: submitOrderUrl
         });
 
     </script>
