--- a/Resources/views/Checkout/totals_discounts.html.twig
+++ b/Resources/views/Checkout/totals_discounts.html.twig
@@ -17,7 +17,7 @@
                         <td>{{ cart_item.name }}</td>
                         <td>{{ cart_item.sku }}</td>
                         <td>{{ decorate(cart_item.price) }}</td>
-                        <td><input class="form-control" type="number" name="qty[{{ cart_item.product_id }}]" value="{{ cart_item.qty }}" /></td>
+                        <td><input class="form-control qty-input" type="number" name="qty[{{ cart_item.product_id }}]" value="{{ cart_item.qty }}" /></td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -56,11 +56,12 @@
                 <button class="btn btn-default">Update</button>
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 totals-container">
             <table class="table table-striped table-bordered table-hover">
                 <thead>
                     <tr>
-                        <th colspan="2">Totals</th>
+                        <th colspan="2">Totals <i class="spinner fa fa-spinner fa-spin fa-fw margin-bottom" style="display:none;"></i>
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
