--- a/Resources/public/css/styles.css
+++ b/Resources/public/css/styles.css
@@ -40,6 +40,23 @@ header {
     color: #333;
 }
 
+li.navbar-dropdown a {
+    border-radius: 0;
+    display: block;
+    border-bottom: 1px solid #ddd;
+    border-top: none;
+    text-align: left;
+}
+
+ul.dropdown-menu {
+    padding:0;
+}
+
+span.nav-badge {
+    position: absolute;
+    right: 2px;
+}
+
 footer {
     margin: 50px 0;
 }
