--- a/Resources/views/Product/index-left-sidebar.html.twig
+++ b/Resources/views/Product/index-left-sidebar.html.twig
@@ -70,69 +70,39 @@
     </div>
 
     <div class="row sorting pager">
-        <div class="col-sm-9">
-            {% if result.total > 0 %}
-                {% include templatePath('Product:facet-list-horizontal.html.twig') with result %}
-            {% endif %}
-        </div>
-        <div class="col-sm-3">
-
-            <div>
-
-                <div class="dropdown pull-right">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="sort-by-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        Sort
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="sort-by-dropdown">
-                        {% for sortable in sortable('product') %}
-                        <li class="navbar-dropdown">
-                            <a href="#" class="sort-by-input">
-                                <input type="radio" name="sort" data-dir="{{ sortable.dir }}" class="sort-by" value="{{ sortable.value }}" {% if sortable.active %} checked="checked"{% endif %} />
-                                {{ sortable.label }}
-                            </a>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-
-
-                {% if result.facetFilters is defined and result.facetFilters|length > 0 and not isSpaEnabled() %}
-                    <div class="dropdown pull-right facet-nav">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="facet-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                            Active
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="facet-0">
-                            {% for facet in result.facetFilters %}
-                                <li class="navbar-dropdown">
-                                    {% if facet.remove_url is defined and facet.remove_url|length > 0 %}
-                                        <a href="{{ facet.remove_url }}">
-                                            <i class="fa fa-times"></i>
-                                            {{ facet.label }} : {{ facet.term|humanize }}
-                                            {% if facet.count > 0 %} <span class="badge pull-right">{{ facet.count }}</span>{% endif %}
-                                        </a>
-                                    {% endif %}
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                {% endif %}
-
-            </div>
-            <div>
-                <div class="pull-right btn-group input-group" role="group">
-                    <button type="button" class="btn pull-left btn-default prev {% if search.page <= 1 %}disabled{% endif %}" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </button>
-                    <input type="number" id="page" class="form-control number" name="{{ search.pageParam }}" value="{{ search.page }}" />
-                    <button type="button" class="btn pull-right btn-default next {% if search.page >= result.pages %}disabled{% endif %}" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </button>
-                </div>
+        <!--
+        <div class="col-sm-4">
+            <div class="btn-group">
+                <a class="btn btn-default btn-sm" id="list" href="#">
+                    <span class="glyphicon glyphicon-th-list"></span>List
+                </a>
+                <a class="btn btn-default btn-sm" id="grid" href="#">
+                    <span class="glyphicon glyphicon-th"></span>Grid
+                </a>
             </div>
         </div>
+        -->
+        <div class="col-sm-4">
 
+        </div>
+        <div class="col-sm-4">
+            <select name="sort" id="sort-by">
+                {% for sortable in sortable('product') %}
+                    <option data-dir="{{ sortable.dir }}" value="{{ sortable.value }}"{% if sortable.active %} selected="selected"{% endif %}>{{ sortable.label }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="col-sm-4">
+            <div class="pull-right btn-group input-group" role="group">
+                <button type="button" class="btn pull-left btn-default prev {% if search.page <= 1 %}disabled{% endif %}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </button>
+                <input type="number" id="page" class="form-control number" name="{{ search.pageParam }}" value="{{ search.page }}" />
+                <button type="button" class="btn pull-right btn-default next {% if search.page >= result.pages %}disabled{% endif %}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </button>
+            </div>
+        </div>
 
         <input type="hidden" name="direction" id="sort-dir" value="{{ sortDir() }}" />
         {% for filterCode, filterValue in search.facetFilters %}
@@ -143,13 +113,21 @@
 
     </form>
     {% if result.total > 0 %}
-
     <div class="row">
-        <div class="col-sm-12 product-list">
+        <div class="col-md-3">
+            <nav role="navigation" class="navbar-default navbar-static-side ">
+                <div class="sidebar sidebar-collapse">
+                    <ul id="side-menu" class="nav">
+                        {% include templatePath('Product:facet-list.html.twig') with result %}
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <div class="col-md-9 product-list">
 
         {% if result.entities is defined and not isSpaEnabled() %}
             {% for entity in result.entities %}
-                <div class="col-sm-4 col-lg-3 col-md-4">
+                <div class="col-sm-4 col-lg-4 col-md-4">
                     <div class="thumbnail">
                         <a href="{{ path('cart_product_view', { 'slug': entity.slug }) }}">
                             <img src="{{ asset(imagePath('product', entity, 'list_grid')) }}" alt="">
@@ -242,7 +220,7 @@
 
             var pagerForm = $('#pager-form');
             var pageInput = $('input#page');
-            var sortByInput = $('input[name="sort"]');
+            var sortByInput = $('select#sort-by');
             var sortDirInput = $('input#sort-dir');
             var newFilter = $('input#is-new');
             var saleFilter = $('input#is-on-sale');
@@ -293,17 +271,6 @@
                 textInput.val('');
                 pagerForm.submit();
                 return true;
-            });
-
-            $('a.sort-by-input').click(function(e){
-                e.preventDefault();
-                var self = $(this);
-                var radio = self.find('input[name="sort"]');
-                radio.prop('checked', true);
-                var sortDir = radio.attr('data-dir');
-                sortDirInput.val(sortDir);
-                pagerForm.submit();
-                return false;
             });
 
             // sort dropdown
