--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -43,7 +43,7 @@
                         <input type="checkbox" value="remember-me" />
                         Remember me
                     </label>
-                    <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
+                    <a href="{{ path('customer_forgot_password') }}" class="pull-right need-help">Forgot Password? </a><span class="clearfix"></span>
                 </form>
             </div>
             <a href="{{ path('customer_register') }}" class="text-center new-account">Create an Account</a>
