--- a/Resources/views/Home/index.html.twig
+++ b/Resources/views/Home/index.html.twig
@@ -1,8 +1,61 @@
 {% extends frontend() %}
 
+{% block javascripts %}
+{{ parent() }}
+
+<script type="text/javascript" src="{{ asset('bundles/mobilecartfrontend/js/typeahead.bundle.min.js') }}"></script>
+<script type="text/javascript">
+    $(function() {
+
+        var pagerForm = $('#pager-form');
+        var textInput = $('input#text-search');
+
+        // fulltext search-query
+        textInput.keypress(function(e){
+            // todo : auto search
+            if (e.which == 13) {
+                pagerForm.submit();
+            }
+        });
+
+        var searchURL = "{{ path('cart_products') }}" + "?format=json&q=%QUERY";
+        var engine = new Bloodhound({
+            remote: {
+                url: searchURL,
+                wildcard: '%QUERY',
+                transform: function(response) {
+                    return response.result.entities;
+                }
+            },
+            identify: function(obj) {
+                return obj.id;
+            },
+            queryTokenizer: Bloodhound.tokenizers.whitespace,
+            datumTokenizer: Bloodhound.tokenizers.whitespace
+        });
+
+        $('input.typeahead').typeahead({
+                    minLength: 2,
+                    highlight: true
+                },
+                {
+                    name: 'products',
+                    display: 'name',
+                    displayKey: 'name',
+                    source: engine
+                }
+        );
+    });
+</script>
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
+
+    <form id="pager-form" action="{{ path('cart_products') }}">
+    {% include templatePath('Shared:header-bar.html.twig') %}
+    </form>
 
     <div class="row">
         <div class="col-md-12">
